fix: center WIP sign SVG on mobile in projects section

--- a/src/styles/pages/projects.css
+++ b/src/styles/pages/projects.css
@@ -576,6 +576,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    align-self: center; /* Center the container within flex parent */
     padding: 0;
     margin-left: calc(-50vw + 50%);
     margin-right: calc(-50vw + 50%);
@@ -585,6 +586,7 @@
     width: 98vw;
     max-width: none;
     margin: 0 auto;
+    display: block;
   }
 }
 
@@ -610,6 +612,7 @@
 
   .wip-sign-container {
     width: 100vw;
+    align-self: center;
     margin-left: calc(-50vw + 50%);
     margin-right: calc(-50vw + 50%);
   }
@@ -618,6 +621,7 @@
     width: 100vw;
     max-width: none;
     margin: 0 auto;
+    display: block;
   }
 }
 
